--- a/app.json
+++ b/app.json
@@ -18,7 +18,7 @@
             "value": ""
         },
         "STRING_SESSION": {
-            "description": "Get it from http://link.thisai.tech/BF6re",
+            "description": "Get it from https://bit.ly/3zOCGxK",
             "value": ""
         },
         "IDS": {
